# tutorial-django

./: .pdm-python  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
livraria/: models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_editora.py  0003_autor_livro.py  0004_livro_autores.py
uploader/migrations/: 0001_initial.py
utils/: files.py
