[project]
name = "teste"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Isadora Alcantara", email = "isadoraalca405@gmail.com"},
]
dependencies = [
    "django>=5.0.3",
    "djangorestframework>=3.15.1",
    "drf-spectacular>=0.27.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.13.2",
    "black>=24.3.0",
]

[tool.black]
line-length = 120
[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = "true"

